fix loader on mobile

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -18,10 +18,8 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover; /* Ensures the image scales correctly */
   z-index: -1;
-  margin-bottom: 0;
 }
 
 /* Hide Background Video by Default (Mobile) */
